[gd_scene load_steps=5 format=3 uid="uid://bqhx28iksc84a"]

[ext_resource type="Script" path="res://item.gd" id="1_b0w6p"]
[ext_resource type="Texture2D" uid="uid://dfbvnaepe6xjj" path="res://Art/Bun.png" id="2_4ae0u"]
[ext_resource type="Script" path="res://item_ref.gd" id="3_omi5u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u3uuq"]
radius = 4.24264

[node name="Bun" type="Node2D"]
script = ExtResource("1_b0w6p")
item_name = "Bun"
holder_position = Vector2(55, 179)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_4ae0u")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -40.0
offset_top = -40.0
offset_right = 39.0
offset_bottom = 39.0

[node name="BunArea2D" type="Area2D" parent="." node_paths=PackedStringArray("item_ref")]
script = ExtResource("3_omi5u")
item_ref = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BunArea2D"]
shape = SubResource("CircleShape2D_u3uuq")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="body_entered" from="BunArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BunArea2D" to="." method="_on_area_2d_body_exited"]
